--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,46 @@
   color: white;
 }
 
+.modal-background {
+  top: 0;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+  background-color: #282c3450;
+  backdrop-filter: blur(4px);
+  transition: all 200ms ease;
+}
+
+.error {
+  background-color: crimson;
+  padding: 10px;
+  border-radius: 0.5rem;
+}
+
+.modal form {
+  height: 200px;
+}
+
+.modal {
+  background-color: #282c34;
+  display: flex;
+  flex-direction: column;
+  border-radius: 0.5rem;
+  padding: 10px;
+}
+
+.modal label {
+  color: aliceblue;
+}
+
+.modal div {
+  display: flex;
+  align-items: center;
+}
+
 ul {
   padding: 0;
   height: calc(100vh - 150px);
